--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <footer contenteditable><a href="https://usamahafeez.com">UsamaHafeez.com - Full stack development</a></footer>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
