--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <footer contenteditable><a href="https://usamahafeez.com">UsamaHafeez.com - Full stack development</a></footer>
+    <footer><a href="https://usamahafeez.com">UsamaHafeez.com - Full stack development</a></footer>
     
   </body>
 </html>
