--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WSDEDPBPT0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-WSDEDPBPT0");
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +22,11 @@
   </head>
   <body>
     <div id="root"></div>
-    <footer><a href="https://usamahafeez.com">UsamaHafeez.com - Full stack development</a></footer>
+    <footer>
+      <a href="https://usamahafeez.com"
+        >UsamaHafeez.com - Full stack development</a
+      >
+    </footer>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
